--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
 },
   "keywords": [],
   "author": "Akanksha",
-  "license": "ISC"
+  "license": "ISC",
   "dependencies": {
-   "gh-pages": "^2.0.1",
-   "react": "^18.2.0",
-   "react-dom": "^18.2.0",
-   "react-scripts": "5.0.1",
-   "web-vitals": "^2.1.4",
-   "travis": "^0.1.1",
-   "yarn": "^1.13.0"
+    "gh-pages": "^2.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "travis": "^0.1.1",
+    "yarn": "^1.13.0"
+   }
 }
 
