--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
     "web-vitals": "^2.1.4",
     "travis": "^0.1.1",
     "yarn": "^1.13.0"
-   }
+   },
+   "eslintConfig": {
+   "extends": "react-app"
+   },
+   "browserslist": [
+     ">0.2%",
+     "not dead",
+     "not ie <= 11",
+     "not op_mini all"
+   ]
+
 }
 
